# WxData

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
Documentation/: ECMWF AIFS Ensemble.md  ECMWF AIFS Post Processing.md  ECMWF IFS Ensemble.md  ECMWF IFS Post Processing.md  ECMWF IFS Wave Ensemble.md  ECMWF IFS Wave Post Processing.md  ECMWF_AIFS.md  ECMWF_High_Res_IFS.md  ECMWF_IFS.md  ECMWF_IFS_Wave.md  GEFS0P25.md  GEFS0P50 Secondary Parameters.md  GEFS0P50.md  GFS0P25 Secondary Parameters.md  GFS0P25.md  GFS0P50.md  Primary GEFS Post-Processing.md  Primary GFS Post Processing.md  RTMA Post Processing.md  Secondary GEFS Post Processing.md  Secondary GFS Post Processing.md  aigefs_pressure_members.md  aigefs_single.md  aigefs_surface_members.md  aigfs.md  bytes_range_request.md  cfs_flux.md  cfs_flux_post_processing.md  cfs_pressure.md  cfs_pressure_post_processing.md  cpc_outlooks.md  current multi raws fuels obs.md  current multi raws weather obs.md  get_csv_data.md  get_excel_data.md  get_gridded_data.md  get_open_aws_data.md  hgefs.md  hgefs_post_processing.md  linear_anti_aliasing.md  (+44 more)
src/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled5.ipynb  Untitled6.ipynb  Untitled7.ipynb  Untitled8.ipynb  Untitled9.ipynb
src/.ipynb_checkpoints/: Untitled5-checkpoint.ipynb
src/Air Now Data/2026_07_24_05/: pm25
src/wxdata/: __init__.py
src/wxdata/aigefs/: __init__.py  aigefs.py  multi_threading.py  paths.py  url_scanners.py
src/wxdata/aigfs/: __init__.py  aigfs.py  paths.py  url_scanners.py
src/wxdata/airnow_api/: __init__.py  observations.py
src/wxdata/calc/: __init__.py  derived_fields.py  kinematics.py  thermodynamics.py  unit_conversion.py
src/wxdata/cfs/: __init__.py  cfs.py  file_scanner.py  url_scanners.py
src/wxdata/client/: __init__.py  byte_range.py  client.py  level_coords.py
src/wxdata/ecmwf/: __init__.py  ecmwf.py  file_funcs.py  keys.py  parsers.py  paths.py  url_scanners.py
src/wxdata/fems/: __init__.py  fems.py  meta_data.py  observations.py  raws_sigs.py
src/wxdata/gdps/: meta_data.py
src/wxdata/gefs/: __init__.py  exception_messages.py  file_funcs.py  gefs.py  paths.py  process.py  url_scanners.py
src/wxdata/gfs/: __init__.py  exception_messages.py  gfs.py  paths.py  url_scanners.py
src/wxdata/hgefs/: __init__.py  hgefs.py  paths.py  url_scanner.py
src/wxdata/metars/: __init__.py  _clean_data.py  metar_obs.py
src/wxdata/noaa/: __init__.py  nws.py
src/wxdata/open_meteo_api/: __init__.py  cmc.py  dwd.py  ecmwf.py  gfs.py  jma.py  meteo_france.py  noaa.py  utils.py
src/wxdata/open_meteo_api/weather_forecasts/: __init__.py  cmc.py  current_weather.py  dwd.py  ecmwf.py  jma.py  meteo_france.py  noaa.py  ukmo.py
src/wxdata/post_processors/: __init__.py  aigefs_post_processing.py  aigfs_post_processing.py  cfs_post_processing.py  ecmwf_post_processing.py  gefs_post_processing.py  gfs_post_processing.py  hgefs_post_processing.py  rtma_post_processing.py
src/wxdata/radar/: __init__.py  nexrad2.py  url_scanner.py
src/wxdata/rtma/: __init__.py  file_funcs.py  file_scanner.py  keys.py  process.py  rtma.py  url_scanners.py
src/wxdata/soundings/: __init__.py  _exceptions.py  wyoming_soundings.py
src/wxdata/utils/: __init__.py  api.py  coords.py  exceptions.py  file_funcs.py  file_scanner.py  missing_optional_dependency.py  nomads_gribfilter.py  pip_installer.py  progress_bar.py  recycle_bin.py  scripts.py  tools.py  warnings.py  xmacis2_cleanup.py
