[project]
name = "wxdata"
version = "1.6"
description = "A Python package of end-to-end weather data clients & raw data clients with VPN/PROXY support, data processors that decode variable keys from GRIB format into a plain-language format & various tools for assisting Python automated workflows, querying meteorological datasets and filling gaps in meteorological data."
readme = "README.md"
requires-python = ">=3.10"
license-files = ["LICENSE*"]
authors = [
    { name = "Eric J. Drewitz" },
]
keywords = ["meteorology", "atmospheric sciences"]
classifiers = [
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Operating System :: OS Independent",
]

dependencies = [
    # Core scientific stack
    "numpy>=1.23,<2.0",
    "pandas>=1.5,<3.0",
    "xarray>=2023.1,<2025.0",

    # Heavy compiled libs (bounded to avoid resolver blowups)
    "netCDF4>=1.6,<1.7",
    "pyproj>=3.5,<3.7",
    "cartopy>=0.22,<0.23",
    "pyart>=1.15,<1.16",

    # Web + async
    "requests>=2.28",
    "aiohttp>=3.8",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",

    # CLI + formatting
    "typer>=0.9",
    "rich>=13.0",

    # Config + validation
    "pydantic>=2.0,<3.0",
    "python-dotenv>=1.0",

    # Optional: boto3 is huge; bounding avoids deep dependency recursion
    "boto3>=1.28,<1.35"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=24.0",
    "ruff>=0.3",
]

[build-system]
requires = ["setuptools>=80.90.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  # Look for packages in the src directory

[project.urls]
Documentation = "https://github.com/edrewitz/wxdata/blob/main/Documentation/Landing%20Page.md"
Repository = "https://github.com/edrewitz/wxdata/tree/main"
