[project]
name = "wxdata"
version = "1.6"
description = "A Python package of end-to-end weather data clients & raw data clients with VPN/PROXY support, data processors that decode variable keys from GRIB format into a plain-language format & various tools for assisting Python automated workflows, querying meteorological datasets and filling gaps in meteorological data."
readme = "README.md"
requires-python = ">=3.10"
license-files = ["LICENSE*"]
authors = [
    { name = "Eric J. Drewitz" },
]
keywords = ["meteorology", "atmospheric sciences"]
classifiers = [
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Operating System :: OS Independent",
]

dependencies = [
  "metpy>=1.7.1",
  "numpy>=2.2.6",
  "pandas>=2.3.3",
  "cartopy>=0.25.0",
  "xarray>=2025.6.1",
  "netcdf4>=1.7.3",
  "shapeography>=1.2",
  "beautifulsoup4>=4.14.3",
  "requests>=2.32.5",
  "cfgrib>=0.9.15.1",
  "dask>=2025.11.0",
  "tqdm>=4.67.3",
  "ecmwf-opendata>=0.3.26",
  "openpyxl>=3.1.5",
  "arm-pyart>=2.2.0",
 
]

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  # Look for packages in the src directory

[project.urls]
Documentation = "https://github.com/edrewitz/wxdata/blob/main/Documentation/Landing%20Page.md"
Repository = "https://github.com/edrewitz/wxdata/tree/main"
